--- a/angular/src/app/dashboard/dashboard.component.scss
+++ b/angular/src/app/dashboard/dashboard.component.scss
@@ -1,16 +1,5 @@
 
 
-.content {
- box-sizing: border-box;
- overflow-y: auto;
- position: absolute;
- right: 0;
- left: auto;
- top: 0;
- bottom: 0;
- box-shadow: 0 0 2px;
-}
-
 .addCourse{
   float:right;
 }
