--- a/angular/src/theme.scss
+++ b/angular/src/theme.scss
@@ -35,6 +35,7 @@ main{
 
 body{
   overflow-y: hidden;
+
 }
 
 a{
@@ -94,18 +95,7 @@ md-progress-spinner{
   margin: auto;
 }
 
-// sidebar for the Menu
 .sidebar{
-  position: absolute;
-  left: 0;
-  top:0;
-  right: auto;
-  bottom: 0;
-  box-sizing: border-box;
-  overflow: auto;
-  overflow-x: hidden;
-  box-shadow: 0 0 2px;
-  width: 33.3333333333%;
   ul{
     list-style: none;
     padding: 0;
@@ -119,17 +109,34 @@ md-progress-spinner{
   }
 }
 
-.content {
- box-sizing: border-box;
- overflow-y: auto;
- position: absolute;
- right: 0;
- left: auto;
- top: 0;
- bottom: 0;
- box-shadow: 0 0 2px;
- width: 66.6666666666666%;
+@media(min-width: 768px){
+  // sidebar for the Menu
+  .sidebar{
+    position: absolute;
+    left: 0;
+    top:0;
+    right: auto;
+    bottom: 0;
+    box-sizing: border-box;
+    overflow: auto;
+    overflow-x: hidden;
+    box-shadow: 0 0 2px;
+    width: 33.3333333333%;
+  }
+
+  .content {
+   box-sizing: border-box;
+   overflow-y: auto;
+   position: absolute;
+   right: 0;
+   left: auto;
+   top: 0;
+   bottom: 0;
+   box-shadow: 0 0 2px;
+   width: 66.6666666666666%;
+  }
 }
+
 
 app-add-module{
   display:block;
